--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "prettier --config ./prettier.config.js --loglevel error --write \"{src,__{tests,mocks}__}/**/*.js\"",
-    "build": "babel src -d dist"
+    "build": "babel src -d dist",
+    "compile": "tsc --pretty"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
@@ -27,7 +28,8 @@
     "husky": "1.3.1",
     "jest": "23.6.0",
     "prettier": "1.15.3",
-    "pretty-quick": "1.8.1"
+    "pretty-quick": "1.8.1",
+    "typescript": "3.7.2"
   },
   "husky": {
     "hooks": {
