--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "./dist",
     "allowJs": true,
     "target": "esnext",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*"]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
