--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "private": true,
   "scripts": {
     "test": "jest --coverage",
-    "lint": "prettier --config ./prettier.config.js --loglevel error --write \"{src,__{tests,mocks}__}/**/*.js\""
+    "lint": "eslint src/**/*.js",
+    "form": "prettier --config ./prettier.config.js --loglevel error --write \"{src,__{tests,mocks}__}/**/*.js\""
   },
   "devDependencies": {
     "@babel/core": "7.7.5",
     "@babel/polyfill": "7.7.0",
     "@babel/preset-env": "7.7.6",
     "@types/jest": "24.0.23",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "24.9.0",
     "eslint": "6.7.2",
     "eslint-config-prettier": "6.7.0",
     "eslint-plugin-jest": "23.1.1",
